--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header class="page-header" role="banner">
-			<h1 class="project-name montserrat">{{ site.title }}</h1>
+			<h1 class="project-name">{{ site.title }}</h1>
 		</header>
 
 		<main id="content" class="main-content" role="main">
