--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,46 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 300;
 }
+
+.navbar {
+	display: flex;
+}
+
+table th {
+	width: 50%;
+}
+
+.navbar-logo {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.navbar-spacer {
+	@include large {
+		flex: 5;
+	}
+
+	@include medium {
+		flex: 2;
+	}
+
+	@include small {
+		flex: 1;
+	}
+}
+
+.navbar-lang {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.page-header {
+	padding-top: 0;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	padding-bottom: 3rem;
+}
