--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 
 {% seo %}
-		<link rel="shortcut icon" type="image/png" href="/try-nano/favicon.png">
+		<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,7 +28,7 @@
 					</div>
 					<div class="navbar-spacer"></div>
 					<div class="navbar-lang">
-						<a href="/try-nano/language/">
+						<a href="{{ site.baseurl }}/language/">
 							<h3 style="font-size: 2vmax; color: white;">Language</h3>
 						</a>
 					</div>
