--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,14 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-
+		<meta property="og:type" content="website">
+		<meta property="og:title" content="Try Nano | Fast, Feeless, Simple.">
+		<meta property="og:image" content="{{ site.baseurl }}/assets/images/nano.svg">
+		<meta property="og:description" content="Try Nano in under 5 minutes.">
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:title" content="Try Nano | Fast, Feeless, Simple.">
+		<meta name="twitter:description" content="Try Nano in under 5 minutes.">
+		<meta name="twitter:image" content="{{ site.baseurl }}/assets/images/nano.svg">
 {% seo %}
 		<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
