--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
 	<head>
-		<title>Try Nano | Fast, Feeless, Simple.</title>
 		<meta charset="UTF-8">
+		<title>Try Nano | Fast, Feeless, Simple.</title>
+		<meta name="title" content="Try Nano | Fast, Feeless, Simple.">
+		<meta name="description" content="Try Nano in under 5 minutes.">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Try Nano | Fast, Feeless, Simple.">
 		<meta property="og:image" content="{{ site.baseurl }}/assets/images/nano.svg">
@@ -10,9 +12,15 @@
 		<meta property="og:site_name" content="Try Nano">
 		<meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
 		<meta name="twitter:card" content="summary">
+		<meta name="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
 		<meta name="twitter:title" content="Try Nano | Fast, Feeless, Simple.">
 		<meta name="twitter:description" content="Try Nano in under 5 minutes.">
 		<meta name="twitter:image" content="{{ site.baseurl }}/assets/images/nano.svg">
+		<meta property="twitter:card" content="summary">
+		<meta property="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
+		<meta property="twitter:title" content="Try Nano | Fast, Feeless, Simple.">
+		<meta property="twitter:description" content="Try Nano in under 5 minutes.">
+		<meta property="twitter:image" content="{{ site.baseurl }}assets/images/nano.svg">
 		<link rel="shortcut icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
