--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Try Nano in under 5 minutes.">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Try Nano | Fast, Feeless, Simple.">
-		<meta property="og:image" content="{{ site.baseurl }}/assets/images/nano.svg">
+		<meta property="og:image" content="{{ site.url }}{{ site.baseurl }}assets/images/nano.svg">
 		<meta property="og:description" content="Try Nano in under 5 minutes.">
 		<meta property="og:site_name" content="Try Nano">
 		<meta property="og:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
@@ -15,7 +15,7 @@
 		<meta name="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
 		<meta name="twitter:title" content="Try Nano | Fast, Feeless, Simple.">
 		<meta name="twitter:description" content="Try Nano in under 5 minutes.">
-		<meta name="twitter:image" content="{{ site.baseurl }}/assets/images/nano.svg">
+		<meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}assets/images/nano.svg">
 		<meta property="twitter:card" content="summary">
 		<meta property="twitter:url" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
 		<meta property="twitter:title" content="Try Nano | Fast, Feeless, Simple.">
@@ -45,7 +45,7 @@
 					</div>
 					<div class="navbar-spacer"></div>
 					<div class="navbar-lang">
-						<a href="{{ site.baseurl }}/language/">
+						<a href="{{ site.baseurl }}language/">
 							<h3 style="font-size: 2vmax; color: white;">Language</h3>
 						</a>
 					</div>
