changed localization icon and moved localization to inside /lang to declutter root

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 		<meta name="theme-color" content="#157878">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 		<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	</head>
 	<body>
 		<header class="page-header" role="banner">
@@ -45,8 +46,10 @@
 					</div>
 					<div class="navbar-spacer"></div>
 					<div class="navbar-lang">
-						<a href="{{ '/language' | relative_url }}">
-							<h3 style="font-size: 2vmax; color: white;">Language</h3>
+						<a href="{{ '/lang' | relative_url }}">
+							<span class="material-icons" style="color: white; font-size: 3vmax;">
+								translate
+							</span>
 						</a>
 					</div>
 				</div>
