summary_large_image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,12 @@
 		<meta property="og:description" content="{{ page.description }}">
 		<meta property="og:site_name" content="{{ page.site_name }}">
 		<meta property="og:url" content="{{ page.url | absolute_url }}">
-		<meta name="twitter:card" content="summary">
+		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:url" content="{{ page.url | absolute_url }}">
 		<meta name="twitter:title" content="{{ page.title }}">
 		<meta name="twitter:description" content="{{ page.description }}">
 		<meta name="twitter:image" content=" {{ '/assets/images/nano.svg' | absolute_url }}">
-		<meta property="twitter:card" content="summary">
+		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="{{ page.url | absolute_url }}">
 		<meta property="twitter:title" content="{{ page.title }}">
 		<meta property="twitter:description" content="{{ page.description }}">
