--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 		<meta name="description" content="{{ page.description }}">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="{{ page.title }}">
-		<meta property="og:image" content="{{ '/assets/images/nano.svg' | absolute_url }}">
+		<meta property="og:image" content="{{ '/assets/images/nano.png' | absolute_url }}">
 		<meta property="og:description" content="{{ page.description }}">
 		<meta property="og:site_name" content="{{ page.site_name }}">
 		<meta property="og:url" content="{{ page.url | absolute_url }}">
@@ -44,12 +44,12 @@
 		<meta name="twitter:url" content="{{ page.url | absolute_url }}">
 		<meta name="twitter:title" content="{{ page.title }}">
 		<meta name="twitter:description" content="{{ page.description }}">
-		<meta name="twitter:image" content=" {{ '/assets/images/nano.svg' | absolute_url }}">
+		<meta name="twitter:image" content=" {{ '/assets/images/nano.png' | absolute_url }}">
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="{{ page.url | absolute_url }}">
 		<meta property="twitter:title" content="{{ page.title }}">
 		<meta property="twitter:description" content="{{ page.description }}">
-		<meta property="twitter:image" content="{{ '/assets/images/nano.svg' | absolute_url }}">
+		<meta property="twitter:image" content="{{ '/assets/images/nano.png' | absolute_url }}">
 		<link rel="shortcut icon" type="image/png" href="{{ '/favicon.png' | relative_url }}">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
