--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,12 +44,7 @@
 		<meta name="twitter:url" content="{{ page.url | absolute_url }}">
 		<meta name="twitter:title" content="{{ page.title }}">
 		<meta name="twitter:description" content="{{ page.description }}">
-		<meta name="twitter:image" content="{{ '/assets/images/nano.png' | absolute_url }}">
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:url" content="{{ page.url | absolute_url }}">
-		<meta property="twitter:title" content="{{ page.title }}">
-		<meta property="twitter:description" content="{{ page.description }}">
-		<meta property="twitter:image" content="{{ '/assets/images/nano.png' | absolute_url }}">
+		<meta name="twitter:image" content="{{ '/assets/images/nano.png' | absolute_url }}?1">
 		<link rel="shortcut icon" type="image/png" href="{{ '/favicon.png' | relative_url }}">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
