add meta to description

--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -2,6 +2,19 @@
 <html lang="en-US">
 	<meta charset="utf-8">
 	<title>Redirecting&hellip;</title>
+	<meta name="title" content="{{ page.title }}">
+	<meta name="description" content="{{ page.description }}">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="{{ page.title }}">
+	<meta property="og:image" content="{{ '/assets/images/nano.png' | absolute_url }}">
+	<meta property="og:description" content="{{ page.description }}">
+	<meta property="og:site_name" content="{{ page.site_name }}">
+	<meta property="og:url" content="{{ page.url | absolute_url }}">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:url" content="{{ page.url | absolute_url }}">
+	<meta name="twitter:title" content="{{ page.title }}">
+	<meta name="twitter:description" content="{{ page.description }}">
+	<meta name="twitter:image" content="{{ '/assets/images/nano.png' | absolute_url }}?1">
 	<link rel="canonical" href="{{ page.redirect_to | relative_url }}">
 	<script>location="{{ page.redirect_to | relative_url }}"</script>
 	<meta http-equiv="refresh" content="0; url={{ page.redirect_to | relative_url }}">
